2012-06-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

 	* support/regression/tests/and_survive.c:
	  Test non-destructive and, regression test for #3534833.

2012-06-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  Fix cost calculation for branches.

2012-06-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  Improve storing of hx in assignment.

2012-06-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fix for 16-bit addition to avoid generating invalid add hl, iy.

2012-06-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve multiplication for Rabbits.

2012-06-13 Leland Morrison <enigmalee AT sourceforge.net>

	* sdas/asz80/z80mch.c:  Allow the tst instruction for z180/.hd64 to
	  use the two operand form (tst a,X) (fixes bug #3534833)

2012-06-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve one-byte shifts, use fix of #3534833 in non-destructive and.

2012-06-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve right shift.

2012-06-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Improve 16-bit addition with operand in hl and result in iy.

2012-06-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Improvements to left shift by literal.

2012-06-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/peep.c:
	  Improvements to non-destructive and, including #3526286.

2012-06-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.c:
	  Fix debug output for GET_VALUE_AT_ADDRESS right operand.

2012-06-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType, &/|/^): optimize bool with literal,